aw: Fix AutoReset usage

This fixes the flaky test (how is it not failing all the time!?)

Bug: 803931
Change-Id: Ie4d681be7bfe502a3872828946fd8d16ad6b83b6
TBR: jaebaek@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/879113
Reviewed-by: Bo <boliu@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Bo <boliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530988}
Former-commit-id: 0c978cdbb4be8f060130f9a6292dbc8c43206783